@@ -334,6 +334,15 @@ The time in seconds until the reset password expires.
 
 Default: `86400` (24h)
 
+passlib
+-------
+
+The path to the `INI file to load as CryptContext
+<https://passlib.readthedocs.io/en/stable/narr/context-tutorial.html#loading-saving-a-cryptcontext>`_.
+If not path is set, Tryton will use the schemes `bcrypt` or `pbkdf2_sha512`.
+
+Default: `None`
+
 attachment
 ----------
 
