@@ -110,12 +110,13 @@ setup(name=name,
         'werkzeug',
         'wrapt',
         'ipaddress',
+        'passlib',
         ],
     extras_require={
         'PostgreSQL': pg_require,
         'graphviz': ['pydot'],
         'Levenshtein': ['python-Levenshtein'],
-        'BCrypt': ['bcrypt'],
+        'BCrypt': ['passlib[bcrypt]'],
         'html2text': ['html2text'],
         },
     zip_safe=False,
